Manifest update with icons

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Vikram Tiwari",
-  "short_name": "Vikram",
+  "name": "Rajat Patel",
+  "short_name": "Rajat",
   "theme_color": "#2196f3",
   "background_color": "#2196f3",
   "display": "fullscreen",
